# src/models/compra.js
@@ -1,14 +1,8 @@
 const {  DataTypes } = require('sequelize');
 const sequelize = require('../config/database');
-const User = require('user'); 
+const user = require('./user'); 
 
 const Compra = sequelize.define('Compra', {
-    id: {
-        type: DataTypes.INTEGER,
-        autoIncrement: true,
-        primaryKey: true,
-        allowNull: false
-    },
     item: {
         type: DataTypes.STRING,
         allowNull: false
@@ -17,11 +11,15 @@ const Compra = sequelize.define('Compra', {
         type: DataTypes.INTEGER,
         allowNull: false
     },
+    pedidoData: {
+        type: DataTypes.STRING,
+        allowNull: false
+    },
     user_id: {
         type: DataTypes.UUID,  
-        allowNull: false,
+        allowNull: true,
         references: {
-            model: User,
+            model: user,
             key: 'id'
         },
         onUpdate: 'CASCADE',
@@ -31,7 +29,7 @@ const Compra = sequelize.define('Compra', {
     tableName: 'pedidos'
 });
 
-User.hasMany(Compra, { foreignKey: 'user_id' });
-Compra.belongsTo(User, { foreignKey: 'user_id' });
+user.hasMany(Compra, { foreignKey: 'user_id' });
+Compra.belongsTo(user, { foreignKey: 'user_id' });
 
 module.exports = Compra;
